2013-01-15  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(ICEDTEA_PATCHES): Add patch when building
	with PaX.
	* patches/pax-mark-rmic-java.patch:
	PaX mark output directory before running just-built
	rmic.

2013-09-20  Andrew John Hughes  <gnu.andrew@redhat.com>

	* NEWS: Cleanup.

2013-09-17  Xerxes Rånby  <xerxes@zafena.se>
	    Robert Lougher  <rob@jamvm.org.uk>

	JamVM
	- JSR 335: fix frame.c
	- Add support for CallerSensitive
	- JSR 335: handle interfaces when resolving a method
	- sun.misc.Unsafe: additional methods get/putAddress
	- JSR 292: make internal functions static
	* NEWS: Updated. Removed note about JSR 355 for IcedTea 2.
	  JSR 335 is only enabled for IcedTea 3 / OpenJDK 8 builds.
	* Makefile.am
	(JAMVM_VERSION): Updated JamVM to 2013-08-28 revision.
	(JAMVM_SHA256SUM): Updated.

2013-08-14  Xerxes Rånby  <xerxes@zafena.se>
	    Robert Lougher  <rob@jamvm.org.uk>

	JamVM
	- JSR 292: enable for OpenJDK 7/IcedTea 2
	- JSR 335: invokeinterface check in method resolution
	- JSR 335: java.lang.invoke.MagicLambdaImpl
	- JSR 292: invokedynamic is 5 bytes - non-direct interp
	- JSR 292: invokedynamic is 5 bytes in length
	- Minor formatting change
	- Minor fixes: use perror for mmap failure
	- FreeClassData: fix comment
	- FreeClassData: adjust method count for Miranda methods
	- JSR 335: remove GC hack
	- JSR 335: implement "bridge" methods for Mirandas
	- JSR 335: handle multiple defaults and conflicts
	* NEWS: Updated.
	* Makefile.am
	(JAMVM_VERSION): Updated JamVM to 2013-07-14 revision.
	(JAMVM_SHA256SUM): Updated.

2013-09-11  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_CHECK_FOR_LCMS): Make error message mention
	version.

2013-09-10  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(BUILD_VERSION): Renamed from OPENJDK_VERSION.
	(COMBINED_VERSION): Use BUILD_VERSION.
	(ICEDTEA_ENV): Likewise.
	(dist-openjdk): Should really use COMBINED_VERSION.
	(dist-openjdk-fsg): Likewise.